syntax = "proto3";

package UserIdentity;

service UserIdentity {
    rpc GetUserIdentity(GetUserIdentityRequest) returns (UserIdentityResponse);
    rpc AddUserIdentity(AddUserIdentityRequest) returns (UserIdentityResponse);
    rpc UpdateEmail(UpdateEmailRequest) returns (Empty);
    rpc DeleteUserIdentity(DeleteUserIdentityRequest) returns (Empty);
}


message Empty{
}

message GetUserIdentityRequest {
    string userId = 1;
}

message AddUserIdentityRequest {
    string userName = 1;
    string email = 2;
    string password = 3;
}

message UpdateEmailRequest {
    string userId = 1;
    string email = 2;
}

message DeleteUserIdentityRequest {
    string userId=1;
}

message UserIdentityResponse {
    string userId = 1;
    string email = 2;
    string userName = 3;
    bool isActive = 4;
}
