syntax = "proto3";
package UserRole;

service UserRole {
    rpc GetUserRole(GetUserRoleRequest) returns (UserRoleResponse);
    rpc UpdateUserRole(UpdateUserRoleRequest) returns (Empty);
}

message Empty{
}

message GetUserRoleRequest {
    string userId = 1;
}

message UpdateUserRoleRequest {
    string userId = 1;
    string role = 2;
}

message UserRoleResponse {
    string userId = 1;
    string role = 2;
}
